k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: doctor-schedule-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: doctor-schedule
          image: elxpro/doctor_schedule:v2
          ports:
            - containerPort: 4000
